<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        tools:context=".LitteraActivity">

        <Spinner
            android:id="@+id/spinnerAutores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:minHeight="48dp"
            android:entries="@array/array_autores"
            tools:ignore="SpeakableTextPresentCheck">

        </Spinner>

        <Button
            android:id="@+id/btnVerMais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerAutores"
            android:layout_alignLeft="@+id/spinnerAutores"
            android:onClick="onClickSaberMais"
            android:text="@string/btn_ver_mais"
            >

        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/btnVerMais"
            >

            <TextView
                android:id="@+id/textDescAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/desc_autor"
                >

            </TextView>

            <TextView
                android:id="@+id/textDescAutorVazio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textDescAutor"
                android:layout_alignLeft="@+id/textDescAutor"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:text="@string/desc_autor_vazio"
                >

            </TextView>


            <TextView
                android:id="@+id/textObrasAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/obras_autor"
                >

            </TextView>

            <TextView
                android:id="@+id/textObrasAutorVazio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textObrasAutor"
                android:layout_alignLeft="@+id/textObrasAutor"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="18dp"
                android:text="@string/obras_autor_vazio"
                >

            </TextView>


        </LinearLayout>




    </RelativeLayout>


</ScrollView>